# han-tyumi

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  fly.toml  han_tyumi.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: lyrics.json
han_tyumi/: main.py
scripts/: build_db.py  start.sh
