[project]
name = "han-tyumi"
version = "0.1.0"
description = ""
authors = [{name = "Chris", email = "cwarren13@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.37.1",
    "langchain>=0.2.14",
    "openai>=1.40.0",
    "deeplake[enterprise]<4.0.0",
    "tiktoken>=0.7.0",
    "langchain-community>=0.2.12",
    "langchain-openai>=0.1.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
